platform/istio/destination-rule-order-service.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: order-service-mtls
  namespace: golden-path
spec:
  host: order-service.golden-path.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
