platform/istio/destination-rule-product-service.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: product-service-mtls
  namespace: golden-path
spec:
  host: product-service.golden-path.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
