platform/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: product-service-mtls
  namespace: golden-path
spec:
  host: golden-path-microservice.golden-path.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: cart-payment-service-mtls
  namespace: golden-path
spec:
  host: cart-payment-service.golden-path.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: order-service-mtls
  namespace: golden-path
spec:
  host: order-service.golden-path.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
